--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
-@import url("https://fonts.googleapis.com/css2? family = Baloo + Da + 2: wght @ 400; 600 & family = Josefin + Slab: wght @ 100; 600 & family = Mulish: wght @ 200; 400 & display = swap ");
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&family=Muli:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap");
 
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css");
+
+body::-webkit-scrollbar {
+  width: 10px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: rgb(0, 0, 0);        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #6b0303;;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 1.5px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
+}
+
+
+
+
 
 * {
   margin: 0;
@@ -10,14 +28,165 @@
 }
 
 :root {
-  --font-primary: "Baloo + Da + 2", serif;
-  --font-secundary: "Josefin + Slab,", serif;
-  --font-action: "Mulish", serif;
+  --font-primary: "Baloo Da 2", serif;
+  --font-secundary: "Josefin Slab", serif;
+  --font-action: "Muli", serif;
 }
-html {
+
+html{
   scroll-behavior: smooth;
 }
 
+body {
+    background-color: #6b0303;
+}
+
+
+    
+   /* MENU PRINCIPAL */
+
+
+    nav {
+  
+        margin: 0 auto;
+        max-width: 800px;
+        background-color: #6b0303;
+        box-shadow:0 3px 15px rgba(0,0,0,.15);
+        
+    }
+    
+   
+    
+    nav ul {
+      
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+    
+    nav ul li {
+        float: left;
+        position: relative;
+    }
+    
+    nav ul li a {
+        display: block;
+        color: rgba(255, 255, 255, .9);
+        text-decoration: none;
+        padding: 1rem 2rem;
+        border-top: 2px solid transparent;
+        border-bottom: 2px solid transparent;
+    }
+    
+    .icon {
+
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+    
+    }
+  
+ /* MENU PRINCIPAL */
+
+  /* RESPONSIVIDADE DO MENU PRINCIPAL */
+
+  @media (min-width: 320px) and (max-width: 349px) {
+
+    .nav ul li a{
+  font-size: 0.75rem;
+  padding-left: 0.5rem;
+  padding-right: 0.1rem;
+  }
+}
+
+  @media (min-width: 350px) and (max-width: 424px) {
+
+    .nav ul li a{
+  font-size: 0.8rem;
+  padding-left: 1rem;
+  padding-right: 0.1rem;
+  }
+}
+
+    @media (min-width: 425px) and (max-width:767px) {
+
+      .nav ul li a{
+    font-size: 1rem;
+    padding-left: 1rem;
+    padding-right: 0.1rem;
+  }  
+}
+  
+ /* RESPONSIVIDADE DO MENU PRINCIPAL */
+
+ /* REDES SOCIAIS */
+
+.redes{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 0.5rem;
+  background-color: #530000;
+
+}
+.redes i {
+  color: #a7a7a7;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 3.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 11rem;
+  
+}
+
+ /* REDES SOCIAIS */
+
+
+ /* RESPONSIVIDADE REDES SOCIAIS */
+ @media (min-width: 320px) and (max-width: 424px) {
+
+  .redes i{
+font-size: 4rem;
+padding-left: 2rem;
+padding-right: 2rem;
+}
+}
+ 
+
+@media (min-width: 425px) and (max-width:767px) {
+
+  .redes i{
+font-size: 4rem;
+padding-left: 2rem;
+padding-right: 2rem;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+  .redes i{
+font-size: 4rem;
+padding-left: 6rem;
+padding-right: 6rem;
+}
+}
+
+@media (min-width: 1024px) and (max-width:1439px) {
+
+  
+  .redes i{
+    font-size: 4rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+    }
+    }
+ /* RESPONSIVIDADE REDES SOCIAIS */
+
+
+
+/* PAGINA INICIAL */
 header {
   width: 100%;
   height: 100vh;
@@ -25,14 +194,15 @@ header {
   position: relative;
 }
 
-.img-perfil img {
-border-radius: 50%;
-width: 20%;
-position: absolute;
-left: 15rem;
-top: 10rem;
-opacity: 0;
-animation: moveBanner 1s 0.5s forwards;
+.banner img {
+
+    border: 6px solid hsla(0, 98%, 26%, 0.733);
+
+    border-radius: 100%;
+
+    width: 175px;
+
+    height: 175px;
 
 }
 
@@ -64,35 +234,44 @@ animation: moveBanner 1s 0.5s forwards;
   position: absolute;
   top: 30%;
   left: 15%;
+
+
 }
 
 .banner h1 {
   color: #ffffff;
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-family: var(--font-primary);
   font-weight: 200;
-  text-shadow: 0.6rem 0.8rem 4px rgba(0, 0, 0, 0.4);
+  text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.4);
+  line-height: 3.5rem;
   margin-bottom: 2rem;
   opacity: 0;
-  top: -2rem;
-  left: 24rem;
   animation: moveBanner 1s 0.5s forwards;
-  white-space: nowrap;
-position: absolute;
 }
 
 .banner p {
   font-family: var(--font-secundary);
   color: #fff;
   font-size: 2rem;
-  text-shadow: 0.3rem 0.4rem rgba(0, 0, 0, 0.4);
+  text-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0.4);
   margin-bottom: 2rem;
   opacity: 0;
   animation: moveBanner 1s 0.7s forwards;
-  position: absolute;
-  left: 24rem;
-  white-space: nowrap;
-  top: 4rem;
+}
+
+.banner button {
+  font-family: var(--font-action);
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  background-color: hsla(0, 98%, 26%, 0.733);
+  padding: 1rem 3rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0;
+  animation: moveBanner 1s 0.9s forwards;
 }
 
 @keyframes moveBanner {
@@ -105,113 +284,112 @@ position: absolute;
   }
 }
 
-.trace {
-  width: 2rem;
-  height: 2rem;
-  position: fixed;
-  z-index: 100;
-  right: 2rem;
-  top: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  cursor: pointer;
+/* PAGINA INICIAL */
+
+/* RESPONSIVIDADE PAGINA INICIAL */
+
+
+@media (min-width: 320px) and (max-width: 424px) {
+
+    .banner h1  {
+
+        font-size: 1.7rem;
+
+
+
+    }
+
+    .banner p  {
+
+        font-size: 1.5rem;
+
+
+
+    }
+
+
 }
 
-.show-menu .trace {
-  right: 16rem;
+@media (min-width: 425px) and (max-width:767px) {
+
+    .banner h1  {
+
+        font-size: 2rem;
+
+
+
+    }
+
+    .banner p  {
+
+        font-size: 1.7rem;
+
+
+
+    }
+
+   
+
 }
 
-.line {
-  background-color: #fff;
-  width: 100%;
-  height: 0.1rem;
-  box-shadow: 0.1rem 0.1rem 1px #000;
-  transition: transform 1s;
+@media (min-width: 768px) and (max-width: 1023px) {
+
+    .banner h1  {
+
+        font-size: 3rem;
+
+
+
+    }
+
+    .banner p  {
+
+        font-size: 2rem;
+
+
+
+    }
+
 }
 
-.show-menu #line1 {
-  transform: rotate(45deg) translate(0.3rem, 0.45rem);
-}
-.show-menu #line2 {
-  opacity: 0;
-  visibility: hidden;
-}
-.show-menu #line3 {
-  transform: rotate(-45deg) translate(0.3rem, -0.45rem);
+@media (min-width: 1024px) and (max-width:1439px) {
+
+    .banner h1  {
+
+        font-size: 4rem;
+
+
+
+    }
+
+    .banner p  {
+
+        font-size: 3rem;
+
+
+
+    }
+
 }
 
-.sidebar {
-  width: 20rem;
-  height: 100vh;
-  background-color: #fff;
-  position: fixed;
-  top: 0;
-  right: -20rem;
-}
+/* RESPONSIVIDADE PAGINA INICIAL */
 
-.show-menu .sidebar {
-  right: 0;
-}
-.menu {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.menu-item {
-  text-align: center;
-  margin-bottom: 0.5rem;
-}
-
-.menu-link {
-  font-family: var(--font-action);
-  font-size: 2rem;
-  color: #555;
-  transition: color 1s;
-}
-
-.menu-link:hover {
-  color: #9a8478;
-}
-
-.social-media {
-  position: absolute;
-  bottom: 2rem;
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.social-media i {
-  background-color: #fff;
-  color: #98acab;
-  height: 2.5rem;
-  width: 2.5rem;
-  font-size: 2.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  transition: background-color 1s;
-}
-
-.social-media i:hover {
-  background-color: #9a8478;
-}
+/* CONHECIMENTOS */
 
 .conhecimentos {
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(16, 1fr);
-  grid-template-rows: repeat(6, 5.1rem);
+  grid-template-rows: repeat(6, 6rem);
   row-gap: 0.5rem;
+  margin-top: 5%;
 }
 
 .conhecimento:nth-child(1) {
   grid-column: 4 / 7;
   grid-row: 1 / 3;
 }
+
 .conhecimento:nth-child(2) {
   grid-column: 3 / 6;
   grid-row: 3 / 5;
@@ -221,22 +399,25 @@ position: absolute;
   grid-column: 4 / 7;
   grid-row: 5 / -1;
 }
+
 .conhecimento:nth-child(4) {
   grid-column: 11 / 14;
   grid-row: 1 / 3;
 }
+
 .conhecimento:nth-child(5) {
-  grid-column: 12 / 16;
+  grid-column: 12 / 15;
   grid-row: 3 / 5;
 }
+
 .conhecimento:nth-child(6) {
   grid-column: 11 / 14;
   grid-row: 5 / -1;
 }
 
-.sessao-conhecimento {
-  overflow: hidden;
-  background-color: rgba(255, 255, 255, 0.9);
+.sessao-conhecimentos {
+  background-color: #f5f5f5;
+  height: 100%;
 }
 
 .sessao-header {
@@ -248,100 +429,325 @@ position: absolute;
 .sessao-header h1 {
   font-family: var(--font-primary);
   font-size: 3rem;
-  color: #000;
-  border-bottom: solid 3px 434343;
-  margin-bottom: 1rem;
-  
+  color: #4b4b4b;
+  border-bottom: solid 3px #6b0303;
+  margin-bottom: 1.5rem;
 }
 
 .conhecimento-header {
   display: flex;
   align-items: center;
-  color: #ffffff;
+  color: #4b4b4b;
+}
+
+.conhecimento-header i {
+  font-size: 2.5rem;
 }
 
 .conhecimento-header h3 {
   font-family: var(--font-secundary);
   font-size: 2rem;
   padding-left: 1rem;
-  color: rgb(0, 0, 0);
 }
 
-.conhecimento-texte {
+.conhecimento-text {
   font-family: var(--font-secundary);
   margin-top: 1rem;
-  color: rgb(0, 0, 0);
 }
 
 .conhecimentos-img-wrapper {
   grid-column: 7 / 11;
-  grid-row: 2 / 20;
-  width: 100%;
+  grid-row: 2 / 6;
+  width: 80%;
+  height: 80%;
 }
 
 .conhecimentos-img-wrapper img {
   object-fit: cover;
-  width: 100%;
+  height: 100%;
 }
 
-.btn-p {
-  position: absolute;
-  font-size: 17px;
-  text-transform: uppercase;
-  padding: 1em 2.5em;
-  border-radius: 6em;
-  transition: all .2s;
-  border: none;
-  background-color: rgb(14, 25, 119);
-  top: 93rem;
-  left: 40.9rem;
- }
 
- .btn-p h1{
-font-size: 1.2rem;
-color: white;
-font-family: var(--font-primary)
- }
- 
- .btn-p:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.2);
- }
- 
- .btn-p:active {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(255, 255, 255, 0.2);
- }
- 
- .btn-p::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 100px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all .4s;
- }
- 
- .btn-p::after {
-  background-color: #fff;
- }
- 
- .btn-p:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
- }
+/* CONHECIMENTOS */
 
-/* SESSÃO PROJETOS */
+/* RESPONSIVIDADE CONHECIMENTOS */
+
+@media (min-width: 320px) and (max-width: 424px) {
+
+  .conhecimentos {
+
+    height: 90%;
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(11, 6rem);
+    row-gap: 0.5rem;
+    }
+
+.conhecimento:nth-child(1)  {
+
+  grid-area: 1 / col4-start / last-line / 6;
+      }
+
+.conhecimento:nth-child(2)  {
+
+  grid-area: 3 / col4-start / last-line / 6;
+    }
+
+.conhecimento:nth-child(3)  {
+
+  grid-area: 5 / col4-start / last-line / 6;
+    }
+
+.conhecimento:nth-child(4)  {
+
+  grid-area: 7 / col4-start / last-line / 6;
+     }
+
+.conhecimento:nth-child(5)  {
+
+  grid-area: 9 / col4-start / last-line / 6;
+    }
+
+.conhecimento:nth-child(6)  {
+
+  grid-area: 11 / col4-start / last-line / 6;
+    }
+
+.conhecimentos-img-wrapper img {
+
+display: none;
+  }
+
+.sessao-header h1 {
+  font-size: 2rem;
+  }
+
+.conhecimento-header h3 {
+
+  font-size: 1rem;
+
+  }
+
+.conhecimento-text {
+
+  margin-top: 0.2rem;
+    text-align: center;
+    padding-right: 4rem;
+    }
+
+}
+
+@media (min-width: 425px) and (max-width:499px) {
+
+  .conhecimentos {
+
+    height: 90%;
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(11, 6rem);
+    row-gap: 0.5rem;
+    }
+
+.conhecimento:nth-child(1)  {
+
+  grid-area: 1 / col4-start / last-line / 3;
+      }
+
+.conhecimento:nth-child(2)  {
+
+  grid-area: 3 / col4-start / last-line / 3;
+    }
+
+.conhecimento:nth-child(3)  {
+
+  grid-area: 5 / col4-start / last-line / 3;
+    }
+
+.conhecimento:nth-child(4)  {
+
+  grid-area: 7 / col4-start / last-line / 3;
+     }
+
+.conhecimento:nth-child(5)  {
+
+  grid-area: 9 / col4-start / last-line / 3;
+    }
+
+.conhecimento:nth-child(6)  {
+
+  grid-area: 11 / col4-start / last-line / 3;
+    }
+
+.conhecimentos-img-wrapper img {
+
+display: none;
+  }
+
+.sessao-header h1 {
+  font-size: 2rem;
+  }
+
+.conhecimento-header h3 {
+
+  font-size: 1rem;
+
+  }
+
+.conhecimento-text {
+
+  margin-top: 0.2rem;
+    text-align: center;
+    padding-right: 4rem;
+    }
+
+}
+
+@media (min-width: 500px) and (max-width: 767px) {
+
+  .conhecimentos {
+
+    height: 90%;
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(11, 6rem);
+    row-gap: 0.5rem;
+    }
+
+.conhecimento:nth-child(1)  {
+
+  grid-area: 1 / col4-start / last-line / 4;
+      }
+
+.conhecimento:nth-child(2)  {
+
+  grid-area: 3 / col4-start / last-line / 4;
+    }
+
+.conhecimento:nth-child(3)  {
+
+  grid-area: 5 / col4-start / last-line / 4;
+    }
+
+.conhecimento:nth-child(4)  {
+
+  grid-area: 7 / col4-start / last-line / 4;
+     }
+
+.conhecimento:nth-child(5)  {
+
+  grid-area: 9 / col4-start / last-line / 4;
+    }
+
+.conhecimento:nth-child(6)  {
+
+  grid-area: 11 / col4-start / last-line / 4;
+    }
+
+.conhecimentos-img-wrapper img {
+
+display: none;
+  }
+
+.sessao-header h1 {
+  font-size: 3rem;
+  }
+
+.conhecimento-header h3 {
+
+  font-size: 2rem;
+
+  }
+
+.conhecimento-text {
+
+  margin-top: 1rem;
+    text-align: center;
+    padding-right: 4rem;
+    }
+
+}
+
+
+@media (min-width: 768px) and (max-width: 1169px) {
+  .conhecimentos {
+
+    height: 100%;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(11, 5rem);
+    row-gap: 1rem;
+    }
+
+.conhecimento:nth-child(1)  {
+
+  grid-area: 1 / col4-start / last-line / 2;
+      }
+
+.conhecimento:nth-child(2)  {
+
+  grid-area: 3 / col4-start / last-line / 2;
+    }
+
+.conhecimento:nth-child(3)  {
+
+  grid-area: 5 / col4-start / last-line / 2;
+    }
+
+.conhecimento:nth-child(4)  {
+
+  grid-area: 7 / col4-start / last-line / 2;
+     }
+
+.conhecimento:nth-child(5)  {
+
+  grid-area: 9 / col4-start / last-line / 2;
+    }
+
+.conhecimento:nth-child(6)  {
+
+  grid-area: 11 / col4-start / last-line / 2;
+    }
+
+.conhecimentos-img-wrapper img {
+
+display: none;
+  }
+
+.sessao-header h1 {
+  font-size: 3rem;
+  }
+
+.conhecimento-header h3 {
+
+  font-size: 2rem;
+
+  }
+
+.conhecimento-text {
+
+  margin-top: 1rem;
+    }
+
+}
+/* RESPONSIVIDADE CONHECIMENTOS */
+
+/* PROJETOS */
 
 .projetos {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 2rem;
+  
 }
+
+
+.sessao-projetos .sessao-header h1{
+  font-family: var(--font-primary);
+  font-size: 3rem;
+ color: #f5f5f5;
+  margin-bottom: 1.5rem;
+  border-bottom: solid 2px #ffffff;
+}
+
 
 .card {
   width: 18rem;
@@ -362,7 +768,7 @@ font-family: var(--font-primary)
   height: 100%;
   border-radius: 0.5rem;
   opacity: 0.8;
-  transition: opacity 0.3s;
+  transition: opacity 0.6s;
 }
 
 .card:hover .card-img-wrapper img {
@@ -376,7 +782,7 @@ font-family: var(--font-primary)
   visibility: hidden;
   padding: 2rem;
   text-shadow: 0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.6);
-  transition: all 0.3s;
+  transition: all 0.6s;
 }
 
 .card-info h2 {
@@ -389,8 +795,10 @@ font-family: var(--font-primary)
 .card-info h3 {
   font-family: var(--font-action);
   font-weight: bolder;
-  color: #6340ff;
+  color: #696969;
   margin-bottom: 1.5rem;
+  -webkit-text-stroke-width: 1px; /* largura da borda */
+  -webkit-text-stroke-color: rgb(255, 255, 255); /* cor da borda */
 }
 
 .card-info p {
@@ -402,14 +810,14 @@ font-family: var(--font-primary)
 }
 
 .btn {
-  background: #6a3093;
-  background: -webkit-linear-gradient(to right, #4476ff, #323093);
-  background: linear-gradient(to left, #4451ff, #3f3093);
+
+  background-color: hsla(0, 98%, 26%, 0.733);
   font-family: var(--font-action);
   color: #eee;
   border-radius: 0.5rem;
   border: none;
   box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
+  cursor: pointer;
 }
 
 .card-info button {
@@ -423,33 +831,222 @@ font-family: var(--font-primary)
   visibility: visible;
 }
 
-footer {
+
+/* PROJETOS */
+
+
+
+/* RESPONSIVIDADE PROJETOS */
+
+@media (min-width: 320px) and (max-width:424px) {
+
+  .projetos  {
+
+display: grid;
+
+
+  }
+
+.card  {
+
+  width: 17rem;
+  height: 24rem;
+  padding-top: 10%;
+  
+    }
+
+
+    .card-info {
+
+      top: 2%;
+      
+        }
+
+  }
+
+  @media (min-width: 425px) and (max-width:767px) {
+
+    .projetos  {
+  
+  display: grid;
+  
+  
+    }
+  
+  .card  {
+  
+    width: 19rem;
+    height: 26rem;
+    padding-top: 10%;
+    
+      }
+  
+  
+      .card-info {
+  
+        top: 15%;
+        
+          }
+  
+    }
+
+    @media (min-width: 768px) and (max-width: 1023px) {
+
+    
+    
+    .card  {
+    
+      width: 15rem;
+      height: 22rem;
+      padding-top: 10%;
+      
+        }
+
+        .card-info {
+    
+          top: 15%;
+          
+            }
+    
+      }
+
+/* RESPONSIVIDADE PROJETOS */
+
+
+
+
+/* RODAPÉ */
+
+footer{
   width: 100%;
   height: 7rem;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #530000;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.footer-content {
+.footer-content{
   width: 60%;
   display: flex;
   justify-content: space-between;
 }
 
-.footer-content p {
+.footer-content p{
   font-family: var(--font-secundary);
-  color: #a7a7a7;
+  color: #ffffff;
   font-size: 1.2rem;
 }
 
-.social-list a {
+.social-list a{
   margin: 0 2rem;
   color: #a7a7a7;
-  font-size: 1.3rem;
+  font-size: 2rem;
 }
 
 .social-list ul {
   display: flex;
 }
+
+#link-topo{
+  position: fixed;
+  right: 3rem;
+  bottom: 3rem;
+  width: 3rem;
+  height: 3rem;
+  background-color: hsla(0, 98%, 26%, 0.733);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  border-radius: .3rem;
+  box-shadow:  0 0.1rem 0.6rem #00000009;
+}
+
+
+/* RODAPÉ */
+
+
+
+
+
+/* RESPONSIVIDADE RODAPÉ */
+
+@media (min-width: 320px) and (max-width:424px) {
+
+ .linkk  {
+display: none;
+  }
+
+
+  .footer-content p{
+    font-size: 0.8rem;
+    
+    
+  }
+
+  .footer {
+    width: 10000px;
+    
+  }
+
+
+  .social-list a {
+
+
+    margin: 0 1rem;
+    font-size: 1.5rem;
+  }
+
+  .social-list ul {
+margin: 1 1rem;
+display: grid;
+  }
+
+}
+
+
+
+
+
+@media (min-width: 425px) and (max-width:767px) {
+
+  .linkk  {
+ display: none;
+   }
+ 
+ 
+   .footer-content p{
+     font-size: 1rem;
+     
+     
+   }
+ 
+   .footer {
+     width: 10000px;
+     
+   }
+ 
+ 
+   .social-list a {
+ 
+ 
+     margin: 0 1rem;
+     font-size: 1.6rem;
+   }
+ 
+   .social-list ul {
+ margin: 1 1rem;
+ display: grid;
+   }
+ 
+ }
+
+
+
+/* RESPONSIVIDADE RODAPÉ */
+
+
+
+
+
